2005-07-14 Vladimir Hirsl
	Fix for 103024: NPE in indexerEncoderUtil.nodeInVisitedExternalEheader
	Project was not being set when creating indexer in IndexManager#getDefaultIndexer().
	
	* index/org/eclipse/cdt/core/index/ICDTIndexer.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexer.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexer.java
	* index/org/eclipse/cdt/internal/core/index/nullindexer/NullIndexer.java
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java
	* src/org/eclipse/cdt/internal/core/InternalCExtension.java

2005-07-14 Vladimir Hirsl
	Fix for 95826: indexer message "File not indexed because it was not built" won't go away
	Info marker was missing INDEXER_MARKER_ORIGINATOR attribute.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/AbstractIndexerRunner.java

2005-07-13 Vladimir Hirsl
	Fix for PR 103428: IndexerManager leaks elementchangelisteners on reset()
	In case of indexer thread restart after crash/shutdown previous listener is
	deregistered before registering a new one.
	
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java

2005-07-11 Vladimir Hirsl
	Fix for PR 100585: [Scanner Discovery - Indexer] Indexer not notified of scanner info change
	Change in project/file scanner info will now cause whole project or just affected files
	to be indexed.
	
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java

2005-07-08 Alain Magloire
	PR 100585:We need to bacth the fire of event.  Actually the CModelOperation needed to be
	change to be aware of nested operation in the same thread.
	* model/org/eclipse/cdt/internal/core/model/BinaryRunner.java
	* model/org/eclipse/cdt/internal/core/model/CElement.java
	* model/org/eclipse/cdt/internal/core/model/CModel.java
	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	* model/org/eclipse/cdt/internal/core/model/CModelException.java